add more primitives

--- a/primitive.html
+++ b/primitive.html
@@ -11,10 +11,15 @@ canvas {
 </head>
 <body>
 	<canvas id="ivy-canvas" width="400" height="250"></canvas>
-	<script type="text/javascript" src="js/lib/3rdparty/require.js"></script>
+	<!-- 
 	<script type="text/javascript" src="js/lib/3rdparty/underscore.js"></script>
+	 -->
+	<script type="text/javascript" src="js/lib/3rdparty/require.js"></script>
 	<script type="text/javascript" src="js/lib/ivy/core.js"></script>
-	<script type="text/javascript" src="js/lib/ivy/primitive.js"></script>
+	<script type="text/javascript" src="js/lib/ivy/arc.js"></script>
+	<script type="text/javascript" src="js/lib/ivy/line.js"></script>
+	<script type="text/javascript" src="js/lib/ivy/bezier.js"></script>
+	<script type="text/javascript" src="js/lib/ivy/quadratic.js"></script>
 	<script type="text/javascript" src="js/test/test-primitive.js"></script>
 </body>
 </html>
