--- a/primitive.html
+++ b/primitive.html
@@ -15,11 +15,12 @@ canvas {
 	<script type="text/javascript" src="js/lib/3rdparty/underscore.js"></script>
 	 -->
 	<script type="text/javascript" src="js/lib/3rdparty/require.js"></script>
-	<script type="text/javascript" src="js/lib/ivy/core.js"></script>
-	<script type="text/javascript" src="js/lib/ivy/arc.js"></script>
-	<script type="text/javascript" src="js/lib/ivy/line.js"></script>
-	<script type="text/javascript" src="js/lib/ivy/bezier.js"></script>
-	<script type="text/javascript" src="js/lib/ivy/quadratic.js"></script>
+	<script type="text/javascript" src="js/lib/ivy/core/core.js"></script>
+	<script type="text/javascript" src="js/lib/ivy/primitive/arc.js"></script>
+	<script type="text/javascript" src="js/lib/ivy/primitive/line.js"></script>
+	<script type="text/javascript" src="js/lib/ivy/primitive/bezier.js"></script>
+	<script type="text/javascript" src="js/lib/ivy/primitive/quadratic.js"></script>
+	<script type="text/javascript" src="js/lib/ivy/primitive/oval.js"></script>
 	<script type="text/javascript" src="js/test/test-primitive.js"></script>
 </body>
 </html>
